--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Binche Brewing Project</title>
+  <title>Binche Brewing Project - title</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
