added a bunch of beers

--- a/beers/amarillo-rising.html
+++ b/beers/amarillo-rising.html
@@ -63,11 +63,12 @@
                 <div class="five columns offset-by-one">
                     <h4 class="beertitle">Amarillo Rising</h4> <br />
                     <strong>ABV:</strong> 4.6%<br /><br />
-                    <strong>Malts:</strong> Pilsner, Wheat<br /><br />
+                    <strong>Malts:</strong> Pilsner<br /><br />
                     <strong>Hops:</strong> Amarillo<br /><br />
+                    <strong>Yeast:</strong> Vermont<br /><br />
                     <strong>Serving:</strong> Draft<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> Based of of one of The Alchemist beers this is a nice simple Blonde ale.<br /><br />
+                    <strong>Tasting Notes: Bready pils malt matched with notes of orange, tangerine and some apricot from the yeast. Got a really great dank note from the dry hop which was a actually a dry tea hop in the keg. </strong><br /><br />
                     
                 </div>
              </div>
