--- a/beers/azzaca.html
+++ b/beers/azzaca.html
@@ -63,11 +63,12 @@
                 <div class="five columns offset-by-one">
                     <h4 class="beertitle">Sunshine Pale Ale: Azzaca</h4> <br />
                     <strong>ABV:</strong> 5%<br /><br />
-                    <strong>Malts:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Hops:</strong> Pilsner, Munich, Oats<br /><br />
+                    <strong>Malts:</strong> Pilsner, Pale Malt, Wheat, Munich, Oats<br /><br />
+                    <strong>Hops:</strong> Columbus, Azacca<br /><br />
+                    <strong>Yeast:</strong> Vermont<br /><br />                    
                     <strong>Serving:</strong> Draft<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong>This is my house pale ale that I keep on tap throughout the year. I focus on one hop variety in the whirlpool and also good amount of dry hop.<br /><br />
+                    <strong>Tasting Notes:</strong>Silky mouthfeel from the oats with an apricot and peach flavor from the VT yeast. Hop aroma ranges from tropical to citrus, leaning more towards the citrus side of things. Solid beer and great hop for a pale ale. <br /><br />
                     
                 </div>
              </div>
