--- a/beers/brussels-pale.html
+++ b/beers/brussels-pale.html
@@ -65,9 +65,10 @@
                     <strong>ABV:</strong> 6.8%<br /><br />
                     <strong>Malts:</strong> Pilsner, Wheat, Biscuit<br /><br />
                     <strong>Hops:</strong> First Gold (UK)<br /><br />
-                    <strong>Serving:</strong> bottle Conditioned<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Yeast:</strong> La Chouffe<br /><br />
+                    <strong>Serving:</strong> Bottle Conditioned<br /><br />
+                    <strong>Description:</strong> Belgian-style Pale Ale w/ Corriander<br /><br />
+                    <strong>Tasting Notes:</strong>Crystal clear and nice carbonation from the bottle conditioning. Spicy with a touch of clove from the yeast. Good malt biscuity profile with a touch of citrus from the First Gold Hops. Really drinkable for the higher ABV, finished really dry. <br /><br />
                     
                 </div>
              </div>
