--- a/beers/dry-cider.html
+++ b/beers/dry-cider.html
@@ -64,10 +64,10 @@
                     <h4 class="beertitle">Dry Cider I</h4> <br />
                     <strong>ABV:</strong> 5%<br /><br />
                     <strong>Juice:</strong> Apple Concentrate<br /><br />
-                    <strong>Hops:</strong> None<br /><br />
+                    <strong>Yeast:</strong> German Ale<br /><br />
                     <strong>Serving:</strong> Bottle Conditioned<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> Cider fermented with German Ale Yeast at low temps<br /><br />
+                    <strong>Tasting Notes:</strong>Nice dryness and apple tart flavor. Almost champagne-like with the bottle conditioning. A good daily drinker at 5% ABV.<br /><br />
                     
                 </div>
              </div>
