--- a/beers/eureka.html
+++ b/beers/eureka.html
@@ -42,7 +42,6 @@
               <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../about.html">ABOUT</a></li>
-                <li><a href="../beers.html">BEERS</a></li>
                 <li><a href="../articles.html">ARTICLES</a></li>
                 </ul>
         </nav>  
@@ -65,9 +64,10 @@
                     <strong>ABV:</strong> 5%<br /><br />
                     <strong>Malts:</strong> Pilsner, Pale, Wheat, Flaked Oats, Munich<br /><br />
                     <strong>Hops:</strong> Columbus, Eureka<br /><br />
+                    <strong>Yeast:</strong> Vermont<br /><br />
                     <strong>Serving:</strong> Draft<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> New England focused Pale ale with a ton of late addition Eureka Hops<br /><br />
+                    <strong>Tasting Notes:</strong> Tropical, Citrus (Sweet Tangerine) and a touch of dank resin. My favorite new modern hop. Silky mouthfeel from the oats and small apricot/peach flavors from the Vermont Yeast. This is by far one of my favorite beers of 2018.<br /><br />
                     
                 </div>
              </div>
