--- a/beers/farmhouse-pale.html
+++ b/beers/farmhouse-pale.html
@@ -65,9 +65,10 @@
                     <strong>ABV:</strong> 3.7%<br /><br />
                     <strong>Malts:</strong> Pilsner, Wheat, Crystal 75<br /><br />
                     <strong>Hops:</strong> Homegrown Cascades<br /><br />
+                    <strong>Yeast:</strong> Duvel<br /><br />
                     <strong>Serving:</strong> Bottle Conditioned<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>Second Running w/crystal. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> Second Runnings ofa pilsner w/crystal added to the mash and homegrown cascade hops.<br /><br />
+                    <strong>Tasting Notes:</strong>Very yeast driven with a citrusy lemon flavor going on.  There's a real subtle bitterness from the Cascade hops and great lacing on the glass. There's a touch of apple and pear in the nose that reminds of a mini-Duvel - probably from the yeast. Bready pils malt profile. <br /><br />
                     
                 </div>
              </div>
