--- a/beers/german-country.html
+++ b/beers/german-country.html
@@ -65,9 +65,10 @@
                     <strong>ABV:</strong> 5%<br /><br />
                     <strong>Malts:</strong> Pilsner, Munich, Wheat<br /><br />
                     <strong>Hops:</strong> Sterling<br /><br />
+                    <strong>Yeast:</strong> German Ale<br /><br />
                     <strong>Serving:</strong> Draft<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> German Kölsch-style beer brewed in winter at low temps<br /><br />
+                    <strong>Tasting Notes:</strong>Bready from the Pils maly but a huge floral and herbal note from the large dry hop on this. Highly drinkable and could pass for a faux-pilsner. I really enjoyed using the Fermentis Safale K-97 yeast in this beer. Good yeast for winter brewing clean beers. <br /><br />
                     
                 </div>
              </div>
