--- a/beers/hoppy-gnome.html
+++ b/beers/hoppy-gnome.html
@@ -65,9 +65,10 @@
                     <strong>ABV:</strong> 3.6%<br /><br />
                     <strong>Malts:</strong> Pilsner, Wheat, Flaked Oats, Munich<br /><br />
                     <strong>Hops:</strong> First Gold (UK), Equinox<br /><br />
+                    <strong>Yeast:</strong> La Chouffe<br /><br />
                     <strong>Serving:</strong> Bottle Conditioned<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> This was hoppy small beer brewed for a local homebrew comp. I wanted to basically mimic La Chouffe's La Chouffeleir.<br /><br />
+                    <strong>Tasting Notes:</strong>Touch of pine and tropical fruit mixed with spice from the yeast to make a true sessionable Belgian Golden. Firm bitterness from the Equinox hops and really nice lacing and carbonation. This is a unique beer that I'd like to work on dialing in the hop profile for future batches. <br /><br />
                     
                 </div>
              </div>
