--- a/beers/london-brown.html
+++ b/beers/london-brown.html
@@ -65,9 +65,10 @@
                     <strong>ABV:</strong> 3.6%<br /><br />
                     <strong>Malts:</strong> Pale, Chocolate, Crystal 75, Black<br /><br />
                     <strong>Hops:</strong> First Gold (UK)<br /><br />
+                    <strong>Yeast:</strong> Rogue<br /><br />
                     <strong>Serving:</strong> Draft<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> Basic English Brown Ale<br /><br />
+                    <strong>Tasting Notes:</strong>Nice chocolate and caramel note in the flavor.  This is an easy drinker for winter.<br /><br />
                     
                 </div>
              </div>
