--- a/beers/noel2017.html
+++ b/beers/noel2017.html
@@ -61,13 +61,14 @@
              </div>
                 
                 <div class="five columns offset-by-one">
-                    <h4 class="beertitle">Bière De Noël</h4> <br />
+                    <h4 class="beertitle">Bière De Noël 2017</h4> <br />
                     <strong>ABV:</strong> 9%<br /><br />
                     <strong>Malts:</strong> Pilsner, Wheat, Special B, Crystal 75, Aromatic, Munich, Chocolate, Candy Sugar<br /><br />
                     <strong>Hops:</strong> First Gold (UK)<br /><br />
+                    <strong>Yeast:</strong> La Chouffe<br /><br />
                     <strong>Serving:</strong> Bottle Conditioned<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>Thyme, orange peel, coriander. pulled 1/2 gallon to boil down to syrup.  erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> This is hopefully going to be a yearly brew release before the holiday in the 9-10% range. Bottles will be cellared for future years tastings. <br /><br />
+                    <strong>Tasting Notes:</strong>Thyme, orange peel, coriander. I pulled 1/2 gallon to boil down to syrup. Malty toffee notes with large spice on the finish. Touch of citrus and orange on the nose. Highly drinkable for a 9% beer with nice lacing on the glass. It's a dry beer with a touch of alchohol in the finish.<br /><br />
                     
                 </div>
              </div>
