--- a/beers/rye-mild.html
+++ b/beers/rye-mild.html
@@ -42,7 +42,6 @@
               <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../about.html">ABOUT</a></li>
-                <li><a href="../beers.html">BEERS</a></li>
                 <li><a href="../articles.html">ARTICLES</a></li>
                 </ul>
         </nav>  
@@ -65,9 +64,10 @@
                     <strong>ABV:</strong> 3.5%<br /><br />
                     <strong>Malts:</strong> Pale, Crystal 80, Chocolate, Flaked Rye<br /><br />
                     <strong>Hops:</strong> Nugget<br /><br />
+                    <strong>Yeast:</strong> Vermont<br /><br />
                     <strong>Serving:</strong> Draft<br /><br />
-                    <strong>Description:</strong> Pilsner, Munich, Oats<br /><br />
-                    <strong>Tasting Notes:</strong>erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.<br /><br />
+                    <strong>Description:</strong> English Mild brewed with Rye and fermented out with Vermont Yeast.<br /><br />
+                    <strong>Tasting Notes:</strong>Freshly baked bread comes to mind in the aroma with malt dominating this beer. Very drinkable with subtle spice and caremel sweetness rounds out a chewy mouthfeel for such a small beer. Touch of fruitiness from the yeast, very drinkable with alot of flavor. Great lacing.<br /><br />
                     
                 </div>
              </div>
