--- a/beers/german-country.html
+++ b/beers/german-country.html
@@ -42,7 +42,6 @@
               <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../about.html">ABOUT</a></li>
-                <li><a href="../beers.html">BEERS</a></li>
                 <li><a href="../articles.html">ARTICLES</a></li>
                 </ul>
         </nav>  
@@ -73,7 +72,7 @@
                 </div>
              </div>
                  <div class="row" style="margin-top: 70px;">
-        <a href="../beers.html" class="beernav">back to the beers</a>
+          <a href="../index.html" class="beernav">back to the beers</a>
     </div>
             </div>
     
