--- a/beers/noel2017.html
+++ b/beers/noel2017.html
@@ -42,7 +42,6 @@
               <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../about.html">ABOUT</a></li>
-                <li><a href="../beers.html">BEERS</a></li>
                 <li><a href="../articles.html">ARTICLES</a></li>
                 </ul>
         </nav>  
@@ -57,7 +56,7 @@
            <div class="container">
             <div class="row">
                 <div class="five columns">
-                    <img src="../images/london-brown.jpg" id="beer" class="u-max-full-width">
+                    <img src="../images/noel2017.jpg" id="beer" class="u-max-full-width">
              </div>
                 
                 <div class="five columns offset-by-one">
@@ -73,7 +72,7 @@
                 </div>
              </div>
                  <div class="row" style="margin-top: 70px;">
-        <a href="../beers.html" class="beernav">back to the beers</a>
+              <a href="../index.html" class="beernav">back to the beers</a>
     </div>
             </div>
     
