--- a/beers/rye-mild.html
+++ b/beers/rye-mild.html
@@ -56,7 +56,7 @@
            <div class="container">
             <div class="row">
                 <div class="five columns">
-                    <img src="../images/london-brown.jpg" id="beer" class="u-max-full-width">
+                    <img src="../images/rye-mild.jpg" id="beer" class="u-max-full-width">
              </div>
                 
                 <div class="five columns offset-by-one">
@@ -72,7 +72,7 @@
                 </div>
              </div>
                  <div class="row" style="margin-top: 70px;">
-        <a href="../beers.html" class="beernav">back to the beers</a>
+        <a href="../index.html" class="beernav">back to the beers</a>
     </div>
             </div>
     
