--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                           </thead>
                           <tbody>
                             <tr>
+                            <td><a href="beers/loral-pils.html" class="beernav">Loral Pilsner</a></td>
+                            <td>4.5%</td>
+                            <td>Mid 2018</td>
+                            </tr> 
+                              
+                            <tr>
                                 <td><a href="beers/rye-mild.html" class="beernav">Ruby Rye Mild</a></td>
                               <td>3.5%</td>
                               <td>Mid 2018</td>
