--- a/beers/amarillo-rising.html
+++ b/beers/amarillo-rising.html
@@ -67,7 +67,7 @@
                     <strong>Yeast:</strong> Vermont<br /><br />
                     <strong>Serving:</strong> Draft<br /><br />
                     <strong>Description:</strong> Based of of one of The Alchemist beers this is a nice simple Blonde ale.<br /><br />
-                    <strong>Tasting Notes: Bready pils malt matched with notes of orange, tangerine and some apricot from the yeast. Got a really great dank note from the dry hop which was a actually a dry tea hop in the keg. </strong><br /><br />
+                    <strong>Tasting Notes: </strong>Bready pils malt matched with notes of orange, tangerine and some apricot from the yeast. Got a really great dank note from the dry hop which was a actually a dry tea hop in the keg. <br /><br />
                     
                 </div>
              </div>
