--- a/beers/loral-pils.html
+++ b/beers/loral-pils.html
@@ -67,7 +67,7 @@
                     <strong>Yeast:</strong> Hurlimann Swiss Lager<br /><br />
                     <strong>Serving:</strong> Draft<br /><br />
                     <strong>Description:</strong> German style pilsner brewed with 100% Loral Hops<br /><br />
-                    <strong>Tasting Notes: Bready pils malt matched with super floral almost noble-like hop presence. Beer is crystal clear with a nice golden hue. Swiss lager yeast produced a clean hop focused beer. Lagered for 3 months. </strong><br /><br />
+                    <strong>Tasting Notes:</strong> Bready pils malt matched with super floral almost noble-like hop presence. Beer is crystal clear with a nice golden hue. Swiss lager yeast produced a clean hop focused beer. Lagered for 3 months. <br /><br />
                     
                 </div>
              </div>
